// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots Pages/Task/Table/Execution Tasks Table Multiple Executions 1`] = `
<div
  className="ant-table-wrapper"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="ant-table"
        data-cy="tasks-table"
        data-loading={false}
      >
        <div
          className="ant-table-container"
        >
          <div
            className="ant-table-content"
            onScroll={[Function]}
            style={Object {}}
          >
            <table
              style={
                Object {
                  "tableLayout": "auto",
                }
              }
            >
              <colgroup>
                <col
                  style={
                    Object {
                      "width": "40%",
                    }
                  }
                />
              </colgroup>
              <thead
                className="ant-table-thead"
              >
                <tr>
                  <th
                    className="ant-table-cell cy-task-table-col-NAME ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="ant-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                  <th
                    className="ant-table-cell cy-task-table-col-STATUS ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="ant-table-column-title"
                      >
                        Patch Status
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                  <th
                    className="ant-table-cell cy-task-table-col-BASE_STATUS ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="ant-table-column-title"
                      >
                        Base Status
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                  <th
                    className="ant-table-cell cy-task-table-col-VARIANT ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="ant-table-column-title"
                      >
                        Variant
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                className="ant-table-tbody"
              >
                <tr
                  className="ant-table-row ant-table-row-level-0"
                  data-row-key="some_id_5"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <td
                    className="ant-table-cell cy-task-table-col-NAME"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="lg-ui-0003 css-84rhzu-StyledLink leafygreen-ui-1cn1hqb"
                      href="/task/some_id_5?execution=14"
                      onClick={[Function]}
                    >
                      <span
                        className="leafygreen-ui-baoi4d"
                      >
                        <span
                          className="css-uz9hsm-WordBreak-wordBreakCss e142uq4k0"
                        >
                          Some fancy execution task
                        </span>
                        <p
                          className="leafygreen-ui-1yli3c0"
                        >
                          Execution 
                          15
                        </p>
                      </span>
                    </a>
                  </td>
                  <td
                    className="ant-table-cell cy-task-table-col-STATUS"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-1w3euls"
                      data-cy="task-status-badge"
                    >
                      Succeeded
                    </div>
                  </td>
                  <td
                    className="ant-table-cell cy-task-table-col-BASE_STATUS"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  />
                  <td
                    className="ant-table-cell cy-task-table-col-VARIANT"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="lg-ui-0003 css-84rhzu-StyledLink leafygreen-ui-1cn1hqb"
                      href="/variant-history/undefined/Windows"
                      onClick={[Function]}
                    >
                      <span
                        className="leafygreen-ui-baoi4d"
                      >
                        Windows 97
                      </span>
                    </a>
                  </td>
                </tr>
                <tr
                  className="ant-table-row ant-table-row-level-0"
                  data-row-key="some_id_6"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <td
                    className="ant-table-cell cy-task-table-col-NAME"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="lg-ui-0003 css-84rhzu-StyledLink leafygreen-ui-1cn1hqb"
                      href="/task/some_id_6?execution=12"
                      onClick={[Function]}
                    >
                      <span
                        className="leafygreen-ui-baoi4d"
                      >
                        <span
                          className="css-uz9hsm-WordBreak-wordBreakCss e142uq4k0"
                        >
                          Another execution task
                        </span>
                        <p
                          className="leafygreen-ui-1yli3c0"
                        >
                          Execution 
                          13
                        </p>
                      </span>
                    </a>
                  </td>
                  <td
                    className="ant-table-cell cy-task-table-col-STATUS"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-1w3euls"
                      data-cy="task-status-badge"
                    >
                      Succeeded
                    </div>
                  </td>
                  <td
                    className="ant-table-cell cy-task-table-col-BASE_STATUS"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  />
                  <td
                    className="ant-table-cell cy-task-table-col-VARIANT"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="lg-ui-0003 css-84rhzu-StyledLink leafygreen-ui-1cn1hqb"
                      href="/variant-history/undefined/Windows"
                      onClick={[Function]}
                    >
                      <span
                        className="leafygreen-ui-baoi4d"
                      >
                        Windows 97
                      </span>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook Storyshots Pages/Task/Table/Execution Tasks Table Single Execution 1`] = `
<div
  className="ant-table-wrapper"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="ant-table"
        data-cy="tasks-table"
        data-loading={false}
      >
        <div
          className="ant-table-container"
        >
          <div
            className="ant-table-content"
            onScroll={[Function]}
            style={Object {}}
          >
            <table
              style={
                Object {
                  "tableLayout": "auto",
                }
              }
            >
              <colgroup>
                <col
                  style={
                    Object {
                      "width": "40%",
                    }
                  }
                />
              </colgroup>
              <thead
                className="ant-table-thead"
              >
                <tr>
                  <th
                    className="ant-table-cell cy-task-table-col-NAME ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="ant-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                  <th
                    className="ant-table-cell cy-task-table-col-STATUS ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="ant-table-column-title"
                      >
                        Patch Status
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                  <th
                    className="ant-table-cell cy-task-table-col-BASE_STATUS ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="ant-table-column-title"
                      >
                        Base Status
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                  <th
                    className="ant-table-cell cy-task-table-col-VARIANT ant-table-column-has-sorters"
                    colSpan={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="ant-table-column-sorters"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="ant-table-column-title"
                      >
                        Variant
                      </span>
                      <span
                        className="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          className="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            className="anticon anticon-caret-up ant-table-column-sorter-up"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            className="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                className="ant-table-tbody"
              >
                <tr
                  className="ant-table-row ant-table-row-level-0"
                  data-row-key="some_id_5"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <td
                    className="ant-table-cell cy-task-table-col-NAME"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="lg-ui-0003 css-84rhzu-StyledLink leafygreen-ui-1cn1hqb"
                      href="/task/some_id_5?execution=5"
                      onClick={[Function]}
                    >
                      <span
                        className="leafygreen-ui-baoi4d"
                      >
                        <span
                          className="css-uz9hsm-WordBreak-wordBreakCss e142uq4k0"
                        >
                          Some fancy execution task
                        </span>
                      </span>
                    </a>
                  </td>
                  <td
                    className="ant-table-cell cy-task-table-col-STATUS"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-1w3euls"
                      data-cy="task-status-badge"
                    >
                      Succeeded
                    </div>
                  </td>
                  <td
                    className="ant-table-cell cy-task-table-col-BASE_STATUS"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  />
                  <td
                    className="ant-table-cell cy-task-table-col-VARIANT"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="lg-ui-0003 css-84rhzu-StyledLink leafygreen-ui-1cn1hqb"
                      href="/variant-history/undefined/Windows"
                      onClick={[Function]}
                    >
                      <span
                        className="leafygreen-ui-baoi4d"
                      >
                        Windows 97
                      </span>
                    </a>
                  </td>
                </tr>
                <tr
                  className="ant-table-row ant-table-row-level-0"
                  data-row-key="some_id_6"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <td
                    className="ant-table-cell cy-task-table-col-NAME"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="lg-ui-0003 css-84rhzu-StyledLink leafygreen-ui-1cn1hqb"
                      href="/task/some_id_6?execution=5"
                      onClick={[Function]}
                    >
                      <span
                        className="leafygreen-ui-baoi4d"
                      >
                        <span
                          className="css-uz9hsm-WordBreak-wordBreakCss e142uq4k0"
                        >
                          Another execution task
                        </span>
                      </span>
                    </a>
                  </td>
                  <td
                    className="ant-table-cell cy-task-table-col-STATUS"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <div
                      className="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-1w3euls"
                      data-cy="task-status-badge"
                    >
                      Succeeded
                    </div>
                  </td>
                  <td
                    className="ant-table-cell cy-task-table-col-BASE_STATUS"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  />
                  <td
                    className="ant-table-cell cy-task-table-col-VARIANT"
                    colSpan={null}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    rowSpan={null}
                    style={Object {}}
                  >
                    <a
                      className="lg-ui-0003 css-84rhzu-StyledLink leafygreen-ui-1cn1hqb"
                      href="/variant-history/undefined/Windows"
                      onClick={[Function]}
                    >
                      <span
                        className="leafygreen-ui-baoi4d"
                      >
                        Windows 97
                      </span>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
